# galerie

./: .dev.example.env  .example.env  .gitignore  .nonsecret.env  Dockerfile  README.md  README.zh.md  app.py  babel.cfg  compose.production.yaml  example.env  fly.toml  pyproject.toml  requirements.txt  shell.nix
.devcontainer/: devcontainer.json
.github/workflows/: build-and-deploy.yml  build-deploy.yml  test-build-deploy.yml
galerie/: eyeris.py  feed.py  feed_filter.py  feed_icon.py  fever.py  fever_aggregator.py  group.py  groups.py  image.py  images.py  inoreader_aggregator.py  inoreader_oauth.py  instagram.py  item.py  miniflux_aggregator.py  parse_feed_features.py  rednote.py  rendered_item.py  rss_aggregator.py  test_fever.py  test_fever_aggregator.py  twitter.py  utils.py  z2k2.py
galerie_flask/: actions_blueprint.py  db.py  db_migration.py  get_aggregator.py  helpers.py  instapaper.py  instapaper_manager.py  login_blueprint.py  miniflux_admin.py  pages_blueprint.py  utils.py
galerie_flask/actions/: actions_routes.py
galerie_flask/db_migrations/: 20251110_add_history_limit_to_users.sql
galerie_flask/pages/: routes.py
galerie_flask/shared_templates/: items_stream.html  segment.html  (+1 more)
galerie_web/: index.py  login.py
rss_waterfall/: fever.py  groups.py  images.py  rss.py
rss_waterfall_web/: index.py  login.py
scripts/: refresh_errored_feeds.py
static/: base.css  elements.css  feed_maintenance.js  feeds.js  grid.js  index.js  item.js  login.js  manage_feeds.js  manifest.json  script.js  style.css  styles.css  utils.js
templates/: index.jinja
(+69 files in other folders)
