[project]
name = "galerie"
version = "0.1.0"
description = "A Flask-based RSS aggregator with a gallery interface"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Flask==3.0.0",
    "requests==2.31.0",
    "beautifulsoup4==4.12.3",
    "python-dotenv==1.0.1",
    "pytz==2024.1",
    "sentry-sdk[flask]==1.43.0",
    "miniflux==1.1.3",
    "flask-babel==4.0.0",
    "Flask-SQLAlchemy==3.1.1",
    "psycopg2_binary==2.9.10",
    "Flask-Static-Digest==0.4.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
